verification/output/openjdk_21/invalid/EmptyCharLiteral.txt
/data/projects/rajac/verification/sources_invalid/lexer/EmptyCharLiteral.java:3: error: empty character literal
        char c = '';
                 ^
1 error
